Fix timeline position and its button's z-index
The timeline is now positioned at the bottom, before the was a small
gap. Furthermore, the timeline button's z-index was reduced, since
it was rendered above the sidebar if the window was small in width.

--- a/app/styles/_timeline.scss
+++ b/app/styles/_timeline.scss
@@ -1,7 +1,7 @@
 #timeline-content, .versionbar {
   width: calc(100% - 20px);
   position: absolute;
-  bottom: 6px;
+  bottom: 0px;
   left: 10px;
   right: 10px;
   // for debugging purposes
@@ -38,7 +38,7 @@
   margin-left: auto;
   margin-right: auto;
   top: 1px;
-  z-index: 1000;
+  z-index: 490;
 }
 
 .btn-timeline:focus {
